--- a/css/style.css
+++ b/css/style.css
@@ -25,3 +25,16 @@ h1 {
 	box-shadow: 0 0 3px 3px rgba(0, 0, 0, 0.2);
 	border-radius: 10px;
 }
+
+.gallery li {
+	width: 120px;
+	height: 120px;
+	border-radius: 50%;
+	overflow: hidden;
+	border: 5px solid #666;
+	float: left;
+}
+
+.clear {
+	clear: both;
+}
