--- a/css/style.css
+++ b/css/style.css
@@ -26,24 +26,41 @@ h1 {
 	border-radius: 10px;
 }
 
+.gallery li,
+.gallery li img,
+.gallery li span {
+	border-radius: 50%;
+}
+
 .gallery li {
 	width: 120px;
 	height: 120px;
-	border-radius: 50%;
-	overflow: hidden;
+	/* overflow: hidden; */
 	border: 5px solid #666;
 	float: left;
-	margin-right: 10px;
-}
-
-.gallery li img {
-	border-radius: 50%;
+	margin-right: 20px;
+	position: relative;
 }
 
 .gallery li span {
 	display: block;
-	color: rgba(200, 200, 200, 0.5);
-	border-radius: 50%;
+	width: 120px;
+	height: 120px;
+	background-color: rgba(200, 200, 200, 0.5);
+	position: absolute;
+	top: 0;
+	text-align: center;
+	line-height: 120px;
+	color: #333;
+	text-shadow: 1px 1px 1px #ddd;
+	opacity: 0;
+	transition: 0.7s;
+	transform: scale(0);
+}
+
+.gallery li a:hover span {
+	opacity: 1;
+	transform: scale(1) rotate(360deg);
 }
 
 .clear {
