--- a/css/style.css
+++ b/css/style.css
@@ -110,6 +110,7 @@ h1 {
 	border: 1px solid white;
 	line-height: 14x;
 	padding: 0px 5px;
+	opacity: 0;
 }
 
 /* Animation */
@@ -123,5 +124,16 @@ h1 {
 	100% {
 		transform: scale(1);
 		opacity: 1;
+	}
+}
+
+@keyframes slideDownFade {
+	0% {
+		opacity: 0;
+		margin-top: -20px;
+	}
+	100% {
+		opacity: 1;
+		margin-top: 0;
 	}
 }
