--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body {
 
 h1 {
 	font-size: 80px;
-	margin: 50px 0;
+	margin: 50px auto;
 	text-align: center;
 	text-shadow: 1px 1px 1px white;
 }
@@ -172,4 +172,15 @@ h1 {
 	100% {
 		opacity: 1;
 	}
-} ;
+}
+
+.attribute {
+	display: none;
+}
+
+/* footer */
+footer {
+	margin: auto;
+	text-align: center;
+	padding: 3rem;
+}
